--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- OG -->
      <meta property="og:title" content="코앤타베 동두천점 웹 메뉴판">
      <meta property="og:type" content="website">
-     <meta property="og:url" content="배포후 생성된 URL">
-     <meta property="og:image" content="배포후에 생성된 이미지 URL">
+     <meta property="og:url" content="https://az0319h.github.io/MenuBoard/">
+     <meta property="og:image" content="https://az0319h.github.io/MenuBoard/images/og_img.webp">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
