--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <!-- OG 페이스북이 개발함 -->
      <meta property="og:title" content="코앤타베 동두천점 웹 메뉴판">
      <meta property="og:type" content="website">
+    <meta property="og:description" content="안녕하세요 코앤타베입니다. 잘 부탁드립니다.">
      <meta property="og:url" content="https://az0319h.github.io/MenuBoard/">
      <meta property="og:image" content="https://az0319h.github.io/MenuBoard/images/og_img.png"/>
     <!-- Google Fonts -->
