동두천 코앤타베 메뉴판

--- a/index.html
+++ b/index.html
@@ -1096,6 +1096,16 @@
                     </li>
                     <li class="board12_item4">
                         <div class="menu_name">
+                            <div class="name eng">Hanmac</div>
+                            <div class="name kor">한맥</div>
+                        </div>
+                        <div class="price">
+                            <p><br></p>
+                            <p class="won">3,000 KRW</p>
+                        </div>
+                    </li>
+                    <li class="board12_item5">
+                        <div class="menu_name">
                             <div class="name eng">Cass Non Alcoholic</div>
                             <div class="name kor">카스제로</div>
                         </div>
@@ -1104,7 +1114,7 @@
                             <p class="won">4,000 KRW</p>
                         </div>
                     </li>
-                    <li class="board12_item5">
+                    <li class="board12_item6">
                         <div class="menu_name">
                             <div class="name eng">Draft Beer</div>
                             <div class="name kor">생맥주</div>
@@ -1114,7 +1124,7 @@
                             <p class="won">5,000 KRW</p>
                         </div>
                     </li>
-                    <li class="board12_item6">
+                    <li class="board12_item7">
                         <div class="menu_name">
                             <div class="name eng">Green Grape Highball</div>
                             <div class="name kor">청포도 하이볼</div>
@@ -1124,7 +1134,7 @@
                             <p class="won">6,500 KRW</p>
                         </div>
                     </li>
-                    <li class="board12_item7">
+                    <li class="board12_item8">
                         <div class="menu_name">
                             <div class="name eng">Peach Highball</div>
                             <div class="name kor">복숭아 하이볼</div>
@@ -1134,7 +1144,7 @@
                             <p class="won">6,500 KRW</p>
                         </div>
                     </li>
-                    <li class="board12_item8">
+                    <li class="board12_item9">
                         <div class="menu_name">
                             <div class="name eng">Grapefruit Highball</div>
                             <div class="name kor">자몽 하이볼</div>
@@ -1144,7 +1154,7 @@
                             <p class="won">6,500 KRW</p>
                         </div>
                     </li>
-                    <li class="board12_item9">
+                    <li class="board12_item10">
                         <div class="menu_name">
                             <div class="name eng">Lemon Highball</div>
                             <div class="name kor">레몬 하이볼</div>
@@ -1154,7 +1164,7 @@
                             <p class="won">6,500 KRW</p>
                         </div>
                     </li>
-                    <li class="board12_item10">
+                    <li class="board12_item11">
                         <div class="menu_name">
                             <div class="name eng">Mango Highball</div>
                             <div class="name kor">망고 하이볼</div>
@@ -1164,7 +1174,7 @@
                             <p class="won">6,500 KRW</p>
                         </div>
                     </li>
-                    <li class="board12_item11">
+                    <li class="board12_item12">
                         <div class="menu_name">
                             <div class="name eng">Add Highball Liquor Shot</div>
                             <div class="name kor">하이볼 양주 샷 추가</div>
