--- a/index.html
+++ b/index.html
@@ -349,8 +349,8 @@
                     </li>
                     <li class="board3_item7">
                         <div class="menu_name">
-                            <div class="name eng">Pork Kimchi Stew</div>
-                            <div class="name kor">돼지고기김치찌개</div>
+                            <div class="name eng">Pork Kimchi Stew(Sold Out)</div>
+                            <div class="name kor">돼지고기김치찌개(품절)</div>
                         </div>
                         <div class="price">
                             <p><br></p>
@@ -948,7 +948,7 @@
                         </div>
                         <div class="price">
                             <p><br></p>
-                            <p class="won">2,500 KRW</p>
+                            <p class="won">5,000 KRW</p>
                         </div>
                     </li>
                     <li class="board11_item2">
@@ -958,7 +958,7 @@
                         </div>
                         <div class="price">
                             <p><br></p>
-                            <p class="won">2,500 KRW</p>
+                            <p class="won">5,000 KRW</p>
                         </div>
                     </li>
                     <li class="board11_item3">
@@ -968,7 +968,7 @@
                         </div>
                         <div class="price">
                             <p><br></p>
-                            <p class="won">2,500 KRW</p>
+                            <p class="won">5,000 KRW</p>
                         </div>
                     </li>
                     <li class="board11_item4">
@@ -978,7 +978,7 @@
                         </div>
                         <div class="price">
                             <p><br></p>
-                            <p class="won">2,500 KRW</p>
+                            <p class="won">5,000 KRW</p>
                         </div>
                     </li>
                     <li class="board11_item5">
