--- a/index.html
+++ b/index.html
@@ -991,7 +991,17 @@
                             <p class="won">5,000 KRW</p>
                         </div>
                     </li>
-                    <li class="board11_item6">
+                       <li class="board11_item6">
+                        <div class="menu_name">
+                            <div class="name eng">SaeRo Apricot</div>
+                            <div class="name kor">새로 살구</div>
+                        </div>
+                        <div class="price">
+                            <p><br></p>
+                            <p class="won">5,000 KRW</p>
+                        </div>
+                    </li>
+                    <li class="board11_item7">
                         <div class="menu_name">
                             <div class="name eng">Vita500(Chamisul Series)</div>
                             <div class="name kor">비타오백(참이슬시리즈)</div>
@@ -1001,7 +1011,7 @@
                             <p class="won">5,000 KRW</p>
                         </div>
                     </li>
-                    <li class="board11_item7">
+                    <li class="board11_item8">
                         <div class="menu_name">
                             <div class="name eng">Extreme Sour(Chamisul Series)</div>
                             <div class="name kor">아이셔(참이슬시리즈)</div>
@@ -1011,7 +1021,7 @@
                             <p class="won">5,000 KRW</p>
                         </div>
                     </li>
-                    <li class="board11_item8">
+                    <li class="board11_item9">
                         <div class="menu_name">
                             <div class="name eng">Grapefruit(Chamisul Series)</div>
                             <div class="name kor">자몽(참이슬시리즈)</div>
@@ -1021,7 +1031,7 @@
                             <p class="won">5,000 KRW</p>
                         </div>
                     </li>
-                    <li class="board11_item9">
+                    <li class="board11_item10">
                         <div class="menu_name">
                             <div class="name eng">Green Grape(Chamisul Series)</div>
                             <div class="name kor">청포도(참이슬시리즈)</div>
@@ -1031,7 +1041,7 @@
                             <p class="won">5,000 KRW</p>
                         </div>
                     </li>
-                    <li class="board11_item10">
+                    <li class="board11_item11">
                         <div class="menu_name">
                             <div class="name eng">Pineapple(Good Day Tok Series)</div>
                             <div class="name kor">파인애플(좋은데이 톡시리즈)</div>
@@ -1041,7 +1051,7 @@
                             <p class="won">5,000 KRW</p>
                         </div>
                     </li>
-                    <li class="board11_item11">
+                    <li class="board11_item12">
                         <div class="menu_name">
                             <div class="name eng">Apple(Good Day Tok Series)</div>
                             <div class="name kor">사과(좋은데이 톡시리즈)</div>
@@ -1051,7 +1061,7 @@
                             <p class="won">5,000 KRW</p>
                         </div>
                     </li>
-                    <li class="board11_item12">
+                    <li class="board11_item13">
                         <div class="menu_name">
                             <div class="name eng">Blueberry(Good Day Tok Series)</div>
                             <div class="name kor">블루베리(좋은데이 톡시리즈)</div>
@@ -1061,7 +1071,7 @@
                             <p class="won">5,000 KRW</p>
                         </div>
                     </li>
-                    <li class="board11_item13">
+                    <li class="board11_item14">
                         <div class="menu_name">
                             <div class="name eng">Pomegranate(Good Day Tok Series)</div>
                             <div class="name kor">석류(좋은데이 톡시리즈)</div>
@@ -1071,7 +1081,7 @@
                             <p class="won">5,000 KRW</p>
                         </div>
                     </li>
-                    <li class="board11_item14">
+                    <li class="board11_item15">
                         <div class="menu_name">
                             <div class="name eng">Calamansi(Good Day Tok Series)</div>
                             <div class="name kor">깔라만시(좋은데이 톡시리즈)</div>
@@ -1081,7 +1091,7 @@
                             <p class="won">5,000 KRW</p>
                         </div>
                     </li>
-                    <li class="board11_item15">
+                    <li class="board11_item16">
                         <div class="menu_name">
                             <div class="name eng">Chungha</div>
                             <div class="name kor">청하</div>
@@ -1091,7 +1101,7 @@
                             <p class="won">6,000 KRW</p>
                         </div>
                     </li>
-                    <li class="board11_item16">
+                    <li class="board11_item17">
                         <div class="menu_name">
                             <div class="name eng">Starlight Chungha Sparkling</div>
                             <div class="name kor">별빛청하</div>
@@ -1101,7 +1111,7 @@
                             <p class="won">6,000 KRW</p>
                         </div>
                     </li>
-                    <li class="board11_item17">
+                    <li class="board11_item18>
                         <div class="menu_name">
                             <div class="name eng">Sweet Blooming</div>
                             <div class="name kor">매화수</div>
@@ -1111,7 +1121,7 @@
                             <p class="won">6,000 KRW</p>
                         </div>
                     </li>
-                    <li class="board11_item18">
+                    <li class="board11_item19">
                         <div class="menu_name">
                             <div class="name eng">Jeju Hallasan</div>
                             <div class="name kor">한라산</div>
@@ -1121,7 +1131,7 @@
                             <p class="won">6,000 KRW</p>
                         </div>
                     </li>
-                    <li class="board11_item19">
+                    <li class="board11_item20">
                         <div class="menu_name">
                             <div class="name eng">SimSool 7sparkle</div>
                             <div class="name kor">심술7도</div>
@@ -1131,6 +1141,16 @@
                             <p class="won">6,500 KRW</p>
                         </div>
                     </li>
+                     <li class="board11_item21">
+                                <div class="menu_name">
+                                    <div class="name eng">YeoWool Alc.25%</div>
+                                    <div class="name kor">여울25도</div>
+                                </div>
+                                <div class="price">
+                                    <p><br></p>
+                                    <p class="won">20,000 KRW</p>
+                                </div>
+                            </li>
                 </ul>
                 <ul class="board12">
                     <p class="category"><span>맥주</span></p>
@@ -1166,6 +1186,16 @@
                     </li>
                     <li class="board12_item4">
                         <div class="menu_name">
+                            <div class="name eng">Crush</div>
+                            <div class="name kor">크러쉬</div>
+                        </div>
+                        <div class="price">
+                            <p><br></p>
+                            <p class="won">5,500 KRW</p>
+                        </div>
+                    </li>
+                    <li class="board12_item5">
+                        <div class="menu_name">
                             <div class="name eng detail">Hanmac</div>
                             <div class="name kor">한맥</div>
                         </div>
@@ -1174,7 +1204,7 @@
                             <p class="won">3,000 KRW</p>
                         </div>
                     </li>
-                    <li class="board12_item5">
+                    <li class="board12_item6">
                         <div class="menu_name">
                             <div class="name eng">Cass Non Alcoholic</div>
                             <div class="name kor">카스제로</div>
@@ -1184,7 +1214,7 @@
                             <p class="won">4,000 KRW</p>
                         </div>
                     </li>
-                    <li class="board12_item6">
+                    <li class="board12_item7">
                         <div class="menu_name">
                             <div class="name eng">Draft Beer</div>
                             <div class="name kor">생맥주</div>
@@ -1194,7 +1224,7 @@
                             <p class="won">5,000 KRW</p>
                         </div>
                     </li>
-                    <li class="board12_item7">
+                    <li class="board12_item8">
                         <div class="menu_name">
                             <div class="name eng">Green Grape Highball</div>
                             <div class="name kor">청포도 하이볼</div>
@@ -1204,7 +1234,7 @@
                             <p class="won">6,500 KRW</p>
                         </div>
                     </li>
-                    <li class="board12_item8">
+                    <li class="board12_item9">
                         <div class="menu_name">
                             <div class="name eng">Peach Highball</div>
                             <div class="name kor">복숭아 하이볼</div>
@@ -1214,7 +1244,7 @@
                             <p class="won">6,500 KRW</p>
                         </div>
                     </li>
-                    <li class="board12_item9">
+                    <li class="board12_item10">
                         <div class="menu_name">
                             <div class="name eng">Grapefruit Highball</div>
                             <div class="name kor">자몽 하이볼</div>
@@ -1224,7 +1254,7 @@
                             <p class="won">6,500 KRW</p>
                         </div>
                     </li>
-                    <li class="board12_item10">
+                    <li class="board12_item11">
                         <div class="menu_name">
                             <div class="name eng">Lemon Highball</div>
                             <div class="name kor">레몬 하이볼</div>
@@ -1234,7 +1264,7 @@
                             <p class="won">6,500 KRW</p>
                         </div>
                     </li>
-                    <li class="board12_item11">
+                    <li class="board12_item12">
                         <div class="menu_name">
                             <div class="name eng">Mango Highball</div>
                             <div class="name kor">망고 하이볼</div>
@@ -1244,7 +1274,7 @@
                             <p class="won">6,500 KRW</p>
                         </div>
                     </li>
-                    <li class="board12_item12">
+                    <li class="board12_item13">
                         <div class="menu_name">
                             <div class="name eng">Add Highball Liquor Shot</div>
                             <div class="name kor">하이볼 양주 샷 추가</div>
